force-app/main/default/objects/ADM__c/fields/TRAN_TransFromBorough__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransFromBorough__c</fullName>
    <label>TRAN_TransFromBorough</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Staten Island</fullName>
            </value>
            <value>
                <fullName>Bronx</fullName>
            </value>
            <value>
                <fullName>Brooklyn</fullName>
            </value>
            <value>
                <fullName>Queens</fullName>
                <default>true</default>
                <label>Queens</label>
            </value>
            <value>
                <fullName>Manhattan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>