force-app/main/default/objects/ADM__c/fields/TRAN_TransFromCubicle__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransFromCubicle__c</fullName>
    <label>TRAN_TransFromCubicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>