force-app/main/default/objects/ADM__c/fields/TRAN_TransFromExt__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransFromExt__c</fullName>
    <label>TRAN_TransFromExt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>