force-app/main/default/objects/ADM__c/fields/TRAN_TransFromFirstName__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransFromFirstName__c</fullName>
    <label>TRAN_TransFromFirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>