force-app/main/default/objects/ADM__c/fields/TRAN_TransFromFloor__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransFromFloor__c</fullName>
    <label>TRAN_TransFromFloor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>