force-app/main/default/objects/ADM__c/fields/TRAN_TransFromHours__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransFromHours__c</fullName>
    <label>TRAN_TransFromHours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>