force-app/main/default/objects/ADM__c/fields/TRAN_TransFromLastName__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransFromLastName__c</fullName>
    <label>TRAN_TransFromLastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>