force-app/main/default/objects/ADM__c/fields/TRAN_TransFromPhone__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransFromPhone__c</fullName>
    <label>TRAN_TransFromPhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>