force-app/main/default/objects/ADM__c/fields/TRAN_TransFromProgram__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransFromProgram__c</fullName>
    <label>TRAN_TransFromProgram</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administration Office</fullName>
            </value>
            <value>
                <fullName>Bureau of Human Resources and Labor Relations</fullName>
            </value>
            <value>
                <fullName>Bureau of Operations</fullName>
            </value>
            <value>
                <fullName>Bureau of Facilities Planning and Administrative Services</fullName>
            </value>
            <value>
                <fullName>Bureau of Clinical Quality Management and Improvement</fullName>
            </value>
            <value>
                <fullName>CHECW Deputy Commissioner</fullName>
            </value>
            <value>
                <fullName>Bureau of Finance, Administration and Services</fullName>
            </value>
            <value>
                <fullName>Bureau of Health Equity Capacity Building</fullName>
            </value>
            <value>
                <fullName>Bureau of Bronx Neighborhood Health</fullName>
            </value>
            <value>
                <fullName>Bureau of Harlem Neighborhood Health</fullName>
            </value>
            <value>
                <fullName>Bureau of Brooklyn Neighborhood Health</fullName>
            </value>
            <value>
                <fullName>Bureau of Chronic Disease Prevention</fullName>
            </value>
            <value>
                <fullName>Bureau of Equitable Health Systems</fullName>
            </value>
            <value>
                <fullName>Office of Chief Medical Examiner</fullName>
            </value>
            <value>
                <fullName>Office of the Commissioner</fullName>
            </value>
            <value>
                <fullName>Office of Chief Operating Officer</fullName>
            </value>
            <value>
                <fullName>Bureau of Audit Services</fullName>
            </value>
            <value>
                <fullName>Strategic Operations and Performance Management</fullName>
            </value>
            <value>
                <fullName>Division Management &amp; Systems Coordination</fullName>
            </value>
            <value>
                <fullName>Bureau of Communicable Diseases</fullName>
            </value>
            <value>
                <fullName>Bureau of Hepatitis, HIV, and STI</fullName>
            </value>
            <value>
                <fullName>Bureau of the Public Health Laboratory</fullName>
            </value>
            <value>
                <fullName>Bureau of Public Health Clinics</fullName>
            </value>
            <value>
                <fullName>Bureau of Tuberculosis Control</fullName>
            </value>
            <value>
                <fullName>Bureau of Immunization</fullName>
            </value>
            <value>
                <fullName>Environmental Health Administration</fullName>
            </value>
            <value>
                <fullName>Bureau of Environmental Disease and Injury Prevention</fullName>
            </value>
            <value>
                <fullName>Bureau of Environmental Sciences and Engineering</fullName>
            </value>
            <value>
                <fullName>Bureau of Food Safety and Community Sanitation</fullName>
            </value>
            <value>
                <fullName>Bureau of Veterinary and Pest Control Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>