force-app/main/default/objects/ADM__c/fields/TRAN_TransFromRoom__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransFromRoom__c</fullName>
    <label>TRAN_TransFromRoom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>