force-app/main/default/objects/ADM__c/fields/TRAN_TransFromTitle__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransFromTitle__c</fullName>
    <label>TRAN_TransFromTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>