force-app/main/default/objects/ADM__c/fields/TRAN_TransportType__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransportType__c</fullName>
    <label>TRAN_TransportType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Move Items (Stuff)</fullName>
            </value>
            <value>
                <fullName>Personnel Transport (People)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>