force-app/main/default/objects/ADM__c/fields/TRAN_TransToBorough__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransToBorough__c</fullName>
    <label>TRAN_TransToBorough</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staten Island</fullName>
            </value>
            <value>
                <fullName>Bronx</fullName>
            </value>
            <value>
                <fullName>Brooklyn</fullName>
            </value>
            <value>
                <fullName>Manhattan</fullName>
            </value>
            <value>
                <fullName>Queens</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>