force-app/main/default/objects/ADM__c/fields/TRAN_TransToCubicle__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransToCubicle__c</fullName>
    <label>TRAN_TransToCubicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>