force-app/main/default/objects/ADM__c/fields/TRAN_TransToDivision__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransToDivision__c</fullName>
    <label>TRAN_TransToDivision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Center for Health Equity and Community Wellness</fullName>
            </value>
            <value>
                <fullName>Office of Chief Medical Examiner</fullName>
            </value>
            <value>
                <fullName>Commissioner/Executive</fullName>
            </value>
            <value>
                <fullName>Chief Operating Officer</fullName>
            </value>
            <value>
                <fullName>Disease Control</fullName>
            </value>
            <value>
                <fullName>Environmental Health</fullName>
            </value>
            <value>
                <fullName>Epidemiology</fullName>
            </value>
            <value>
                <fullName>Emergency Preparedness and Response</fullName>
            </value>
            <value>
                <fullName>Family and Child Health</fullName>
            </value>
            <value>
                <fullName>First Deputy Commissioner and Chief Equity Officer</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Mental Hygiene</fullName>
            </value>
            <value>
                <fullName>Office of External Affairs</fullName>
            </value>
            <value>
                <fullName>Office of General Counsel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>