force-app/main/default/objects/ADM__c/fields/TRAN_TransToExt__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransToExt__c</fullName>
    <label>TRAN_TransToExt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>