force-app/main/default/objects/ADM__c/fields/TRAN_TransToFirstName__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransToFirstName__c</fullName>
    <label>TRAN_TransToFirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>