force-app/main/default/objects/ADM__c/fields/TRAN_TransToFloor__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransToFloor__c</fullName>
    <label>TRAN_TransToFloor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>