force-app/main/default/objects/ADM__c/fields/TRAN_TransToHours__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransToHours__c</fullName>
    <label>TRAN_TransToHours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>