force-app/main/default/objects/ADM__c/fields/TRAN_TransToLastName__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransToLastName__c</fullName>
    <label>TRAN_TransToLastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>