force-app/main/default/objects/ADM__c/fields/TRAN_TransToPhone__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransToPhone__c</fullName>
    <label>TRAN_TransToPhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>