force-app/main/default/objects/ADM__c/fields/TRAN_TransToRoom__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransToRoom__c</fullName>
    <label>TRAN_TransToRoom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>