force-app/main/default/objects/ADM__c/fields/TRAN_TransToTitle__c.field-meta.xml
<CustomField>
    <fullName>TRAN_TransToTitle__c</fullName>
    <label>TRAN_TransToTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>