force-app/main/default/objects/ADM__c/fields/TRAN_Unit__c.field-meta.xml
<CustomField>
    <fullName>TRAN_Unit__c</fullName>
    <label>TRAN_Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>