force-app/main/default/objects/ADM__c/fields/TRAN_UpdatedBy__c.field-meta.xml
<CustomField>
    <fullName>TRAN_UpdatedBy__c</fullName>
    <label>TRAN_UpdatedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>