force-app/main/default/objects/ADM__c/fields/TRAN_VehicleNo__c.field-meta.xml
<CustomField>
    <fullName>TRAN_VehicleNo__c</fullName>
    <label>TRAN_VehicleNo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>