force-app/main/default/objects/ADM__c/recordTypes/Business_Card_Request.recordType-meta.xml
<RecordType>
    <fullName>Business_Card_Request</fullName>
    <active>true</active>
    <label>Business Card Request</label>
</RecordType>