force-app/main/default/objects/ADM__c/recordTypes/Print_Requisition.recordType-meta.xml
<RecordType>
    <fullName>Print_Requisition</fullName>
    <active>false</active>
    <label>Print Requisition</label>
</RecordType>