force-app/main/default/objects/ADM__c/recordTypes/Transportation_Request.recordType-meta.xml
<RecordType>
    <fullName>Transportation_Request</fullName>
    <active>false</active>
    <label>Transportation Request</label>
</RecordType>