force-app/main/default/objects/ADM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BCR_AssignedToName__c</columns>
    <columns>BCR_RequesterCellPhone__c</columns>
    <columns>BCR_ContactRequired__c</columns>
    <columns>BCR_PositionRequired__c</columns>
    <columns>BCR_PublicDealing__c</columns>
    <columns>BCR_RepresentAgency__c</columns>
    <columns>BCR_DivisionAction__c</columns>
    <columns>BCR_New_RequesterName__c</columns>
    <columns>BCR_New_RequesterEmail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>